examples/pos/bidirectional/higherorderobject.effekt
interface Choose {
  def choose() {f: () => Unit }  {g: () => Unit }: Unit
}

def amb = new Choose {
  def choose {f: () => Unit } {g: () => Unit } = {
    println("first");
    f();
    println("second");
    g()
  }
}

def main() = {
  amb.choose() { println("hello") } { println("world") };
  println("after call")
  42
}