examples/neg/issue369-multiple.effekt
interface Eff {
  def op(): Int
}

def e: Eff = new Eff {
  def op() = println("42"); 42 // ERROR Unexpected tokens after operation definition
  def foo() = 42 // ERROR Operation foo is not part of interface Eff
}
